22-feb-19/demo/91c_fortio_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortio
  labels:
    app: fortio
spec:
  ports:
  - port: 8080
    name: http-fortio
  - port: 8079
    name: grpc-ping
  selector:
    app: fortio
