22-feb-19/demo/zipkinsvc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jaeger
    app.kubernetes.io/component: zipkin
    app.kubernetes.io/name: jaeger
  name: zipkin
  namespace: istio-system
spec:
  ports:
  - name: jaeger-collector-zipkin
    port: 9411
    protocol: TCP
    targetPort: 9411
  selector:
    app.kubernetes.io/component: all-in-one
    app.kubernetes.io/name: jaeger
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
