22-feb-19/demo/2b_gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kiali-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 20001
      name: http
      protocol: HTTP
    hosts:
    - "*"
