22-feb-19/demo/3b_vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali 
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        exact: /console
    route:
    - destination:
        host: kiali 
        port:
          number: 20001
